Added technology section

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tom Plucinski",
+  "name": "Website",
   "description": "My personal website",
   "version": "1.0.0",
   "author": "Tom Plucinski",
