--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Website",
+  "name": "website",
   "description": "My personal website",
   "version": "1.0.0",
   "author": "Tom Plucinski",
@@ -19,7 +19,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "start": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
